--- a/process.css
+++ b/process.css
@@ -33,7 +33,7 @@
     }
     body{
         background-color: var(--background-color);
-        overflow-x: hidden;
+        overflow: hidden;
         font-family: 'Unbounded';
     }
     ::-webkit-scrollbar{
