--- a/preload.css
+++ b/preload.css
@@ -36,6 +36,10 @@ height: 100%;
 background:var(--blue-accent-color);
 animation: slider 4.5s 1s 1 forwards;
 }
+
+.slider > div{
+
+}
 @keyframes text-opacity{
 from{
     opacity: 1;
@@ -44,16 +48,20 @@ from{
 
 to{
     opacity: 0;
-    display: none;
+    
 }
+
 }
+
+
 @keyframes slider {
 to{
     transform: translateX(100%);
-
+    display: none;
 }
 
 from{
   
 }
 }
+
